# nlang

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  main.hpp  source.n  version.hpp.in
common/: CMakeLists.txt  ast.hpp  bytecode.cpp  bytecode.hpp  conversion_utils.hpp  error_reporter.hpp  opcodes.hpp  stub.cpp  token.hpp  tokens.hpp
common/include/common/: ast.hpp  bytecode.hpp  environment.hpp  error_reporter.hpp  token.hpp
common/include/common/ast/: ast.hpp
common/include/common/handles/: handle.hpp
common/include/common/heap/: heap.hpp
common/include/common/objects/: string.hpp
common/include/common/values/: primitives.hpp  value.hpp
common/utils/: defs.hpp  nan_boxed_primitive.hpp  traits.hpp
compiler/: CMakeLists.txt  assembler.cpp  assembler.hpp  compiler.cpp  compiler.hpp  disassembler.cpp  disassembler.hpp
compiler/include/compiler/: bytecode.hpp  compiler.hpp  instructions.hpp  registers_shape.hpp  scope.hpp  semantic_analyser.hpp
compiler/proto/: class_def.proto
compiler/src/: stub.cpp
compiler/ut/: CMakeLists.txt
core/: .gitignore  CMakeLists.txt  main.cpp  version.hpp  version.hpp.in
docs/: README.md  developer-guide.md  tutorial.md
docs/reference/html/: aligned__alloc_8hpp_source.html  alloc_8hpp_source.html  annotated.html  ast_8hpp_source.html  backtrace_8hpp_source.html  bytecode_8hpp_source.html  bytecode__executor_8hpp_source.html  bytecode__function_8hpp_source.html  class_8hpp_source.html  classes.html  classnlang_1_1BasicGC-members.html  classnlang_1_1BasicGC.html  classnlang_1_1Bool-members.html  classnlang_1_1Bool.html  classnlang_1_1BytecodeExecutor-members.html  classnlang_1_1BytecodeExecutor.html  classnlang_1_1BytecodeFunction-members.html  classnlang_1_1BytecodeFunction.html  classnlang_1_1Class-members.html  classnlang_1_1Class.html  classnlang_1_1Closure-members.html  classnlang_1_1Closure.html  classnlang_1_1Compiler-members.html  classnlang_1_1Compiler.html  classnlang_1_1Context-members.html  classnlang_1_1Context.html  classnlang_1_1FakeNanBoxedPrimitive-members.html  classnlang_1_1FakeNanBoxedPrimitive.html  classnlang_1_1Function-members.html  classnlang_1_1Function.html  classnlang_1_1Handle-members.html  classnlang_1_1Handle.html  classnlang_1_1Heap-members.html  classnlang_1_1Heap.html  classnlang_1_1HeapValue-members.html  classnlang_1_1HeapValue.html  classnlang_1_1HeapValueHandler-members.html  classnlang_1_1HeapValueHandler.html  classnlang_1_1IErrorReporter-members.html  classnlang_1_1IErrorReporter.html  (+257 more)
docs/reference/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+10 more)
grammar/: grammar.g4  grammar.txt  nlang.g4
ide/intellij/: .gitignore  build.gradle  settings.gradle
ide/intellij/src/main/java/org/nlang/: JNI.java  Main.java  NLang.java  NLangFile.java  NLangFileType.java  NLangHighlighterFactory.java  NLangIcons.java  NLangLexer.java  NLangToken.java
ide/jni/: CMakeLists.txt  main.cpp  org_nlang_JNI.h
interpreter/: CMakeLists.txt  ast_interpreter.hpp  class.hpp  function.hpp  handle.hpp  heap.hpp  interpreter.hpp  object.hpp  page.hpp  value.hpp
interpreter/include/interpreter/: ast_interpreter.hpp  bytecode_executor.hpp  bytecode_function.hpp  class.hpp  context.hpp  function.hpp  gc.hpp  handle.hpp  heap.hpp  interpreter.hpp  native_function.hpp  object.hpp  page.hpp  stack_frame.hpp  stack_values.hpp  string.hpp  thread.hpp  value.hpp
interpreter/include/interpreter/objects/: primitives.hpp  string.hpp
interpreter/include/interpreter_new/: module.hpp  module_loader.hpp
interpreter/src/: context.cpp  function.cpp  stub.cpp
interpreter/ut/: CMakeLists.txt  class_and_object_creation.cpp  internal_string.cpp  thread_spawn_and_execution.cpp
parser/: CMakeLists.txt  ast.hpp  ast_interpreter.hpp  char_stream.hpp  error_reporter.hpp  parser.hpp  scanner.cpp  scanner.hpp  tokens.hpp
parser/include/parser/: char_stream.hpp  parser.hpp  parser_new.hpp  scanner.hpp  scanner_new.hpp  stream_cache.hpp  token_stream.hpp
parser/src/: scanner.cpp  token_stream.cpp
parser/ut/: CMakeLists.txt  parser.cpp  scanner.cpp
samples/: sample.n
tests/: CMakeLists.txt  class_and_object_creation.cpp  forward_list_view.cpp  internal_string.cpp  interpreter-heap.cpp  page_allocation.cpp  slot_storage.cpp  tests_main.cpp  thread_spawn_and_execution.cpp
utils/: CMakeLists.txt
utils/include/utils/: alloc.hpp  backtrace.hpp  containers.hpp  debug.hpp  defs.hpp  forward_list_view.hpp  holder.hpp  macro.hpp  nan_boxed_primitive.hpp  page.hpp  platform_dependent.hpp  pointers.hpp  shared_ptr.hpp  slot_storage.hpp  string_converters.hpp  strings.hpp  thread_pool.hpp  threading.hpp  traits.hpp
utils/include/utils/alloc/: aligned_alloc.hpp  page.hpp
utils/include/utils/containers/: forward_list_view.hpp  nan_boxed_primitive.hpp  slot_storage.hpp
utils/include/utils/debug/: backtrace.hpp
utils/include/utils/pointers/: intrusive_ptr.hpp  shared_ptr.hpp  unique_ptr.hpp
utils/include/utils/strings/: ustring.hpp
utils/include/utils/threading/: thread_pool.hpp
utils/src/: backtrace.cpp  page.cpp  thread_pool.cpp
utils/ut/: CMakeLists.txt  forward_list_view.cpp  nan_boxed_primitive.cpp  page_allocation.cpp  slot_storage.cpp
vm/: CMakeLists.txt  vm.cpp  vm.hpp
